--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                             <p class="text-sm text-slate-400">Dec 2024 – Apr 2025</p>
                         </div>
                         <p class="highlight font-medium">Matrimony.com</p>
-                        <p class="mt-3 text-slate-400">Engineered a data management system using Node.js and MySQL, implementing robust CRUD functionalities and optimized database schemas that improved data retrieval efficiency and system reliability.</p>
+                        <p class="mt-3 text-slate-400">Engineered an Angular/Node.js/Express/MySQL library app serving multiple users, slashing lookup
+time by 50% via optimized query indexing.</p>
                     </div>
                     <div class="section-card">
                         <div class="flex justify-between items-start">
@@ -231,7 +232,7 @@
                                 <i class="fas fa-book-open text-2xl highlight"></i>
                                 <a href="https://github.com/Abijithsv/Online_Book_Library.git" target="_blank" class="link-hover text-slate-300 text-xl"><i class="fab fa-github"></i></a>
                             </div>
-                            <h3 class="font-bold text-lg text-white mb-2">Data-Driven Library Application</h3>
+                            <h3 class="font-bold text-lg text-white mb-2">Book Library Application</h3>
                             <p class="text-slate-400 text-sm">Engineered a scalable application for multi-user data management, achieving a 50% reduction in data lookup time through optimized query indexing.</p>
                         </div>
                         <div class="flex flex-wrap gap-2 mt-4">
@@ -481,3 +482,4 @@
     </script>
 </body>
 </html>
+
