--- a/index.html
+++ b/index.html
@@ -472,8 +472,7 @@
 
   <footer class="container">
     <div class="grid grid-2">
-      <div>© <span id="year"></span> Abijith S V. Built with ♥ as a single HTML file.</div>
-      <div style="text-align:right">Theme: Blue/White L‑Dark</div>
+      <div>© <span id="year"></span> Abijith S V. Built with ♥.</div>
     </div>
   </footer>
 
