--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
           <button class="btn" id="copyEmail">Copy Email</button>
         </div>
         <div class="stats" aria-label="Quick stats">
-          <div class="stat" data-count="25"><b><span class="counter">0</span>+ Projects</b><small>Full‑stack, ML & IoT</small></div>
-          <div class="stat" data-count="8"><b><span class="counter">0</span> Hackathons</b><small>Finalist & Winner</small></div>
-          <div class="stat" data-count="5"><b><span class="counter">0</span> Workshops</b><small>Organized for peers</small></div>
+          <div class="stat" data-count="5"><b><span class="counter">0</span>+ Projects</b><small>Full‑stack, ML & IoT</small></div>
+          <div class="stat" data-count="5"><b><span class="counter">0</span>+ Hackathons</b><small>Finalist & Winner</small></div>
+          <div class="stat" data-count="4"><b><span class="counter">0</span> Workshops</b><small>Organized for peers</small></div>
         </div>
       </div>
       <div class="profile-pic-container card tilt" aria-hidden="true">
@@ -772,3 +772,4 @@
   </script>
 </body>
 </html>
+
